--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "expo-linking": "^7.1.5",
     "expo-router": "^5.0.6",
     "expo-splash-screen": "^0.30.8",
+    "expo-sqlite": "^15.2.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "^0.4.4",
     "expo-system-ui": "^5.0.7",
     "expo-web-browser": "^14.1.6",
+    "jotai": "^2.12.4",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.2",
@@ -35,7 +37,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "^13.13.5"
+    "react-native-webview": "^13.13.5",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
