--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/elements": "^2.4.1",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.76.1",
     "expo": "~53.0.9",
     "expo-blur": "^14.1.4",
     "expo-constants": "^17.1.6",
@@ -23,12 +24,10 @@
     "expo-linking": "^7.1.5",
     "expo-router": "^5.0.6",
     "expo-splash-screen": "^0.30.8",
-    "expo-sqlite": "^15.2.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "^0.4.4",
     "expo-system-ui": "^5.0.7",
     "expo-web-browser": "^14.1.6",
-    "jotai": "^2.12.4",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.2",
